Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Mon Jan 21 2007 - 0.7.2
- default_virt_file_size and default_virt_ram added to settings

* Wed Jan 09 2007 - 0.7.1
- allow imports to force usage of a specific kickstart template with --kickstart
- added --yumopts parameter to repos (works just like --kopts/--ksmeta)
- minor doc fixes
- fix for name of F8 comps.xml file
- added option --rsync-flags to import command
- added http_port to settings to run Apache on non-80
- rsync during createrepo now keeps filesystem permissions/groups
- ...

* Mon Dec 10 2007 - 0.7.0
- Testing branch
- Fix bug related to <<inherit>> and kickstart args 
- Make CLI functions modular and use optparse
- Quote wget args to avoid creating stray files on target system
- Support Xen FV as virt type (requires F8+)
- Implemented fully pluggable authn/authz system
- WebUI is now mod_python based
- Greatly enhanced logging (goes to /var/log/cobbler/cobbler.log)
- ...

* Wed Nov 14 2007 - 0.6.4
- Changed permissions of auth.conf
- Fixes for working with rhn_yum_plugin
- still allow repo configuration for distro repos that have just 1 repo (like C5.1)
- disable CGI weblogging by default (backend logging TBA)
- fix WebUI handling of keep_updated (repo field) and netboot_enabled (system field)
- disable the blender_cache as it's running afoul of the sync code
- update htaccess file to only authenticate the webui, not nopxe.cgi and findks.cgi

* Wed Nov 07 2007 - 0.6.3
- Be able to define and use Multiple NICs per system
- Add --virt-cpus to profile editing
- Fix bug where WUI (XMLRPC) auth wasn't supported on EL4
- Add --virt-bridge to profile editing and NICs
- Added serializer_shelve (as option) for added performance/persistance over YAML, experimental in /etc/cobbler/modules.conf, see Wiki
- Backup state files and migrate state structures upon RPM upgrade
- Added some more redundant files (for unsupported distros) to the rsync.exclude file